<resources>
    <string name="app_name">Ribbit</string>


    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">SIGN UP</string>
    <string name="signUpText_label">Don\'t have an account? Sign Up!</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email_hint">Email</string>
    <string name="signup_button_label">Sign Up</string>
    <string name="signup_error_message">Please be sure you enter a username, password and email address!!!</string>
    <string name="signup_error_title">Oops!!!</string>
    <string name="login_error_message">Please be sure you enter a username, password!!!</string>
    <string name="login_error_title">Oops!!!</string>
    <string name="menu_action_logout">Log Out</string>
    <string name="empty_inbox_label">Empty Inbox</string>
    <string name="empty_friends_label">Add friends to begin...</string>
    <string name="menu_action_edit_friend">Edit Friend</string>
    <string name="title_activity_edit_friends">EditFriendsActivity</string>
    <string name="error_title">We\'re sorry</string>
    <string name="menu_action_camera">Camera</string>
    <string name="error_external_storage">There was a problem accessing your device\'s external storage.</string>
    <string name="general_error">Sorry, there was an error!!!</string>
    <string name="video_file_size_warning">The selected video must be less than 10MB</string>
    <string name="error_file_too_long">The selected file is too large, select a new file!!!</string>
    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>
    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="empty_recipient_message"><![CDATA[Choose some friend first!!!/> </RelativeLayout>]]></string>
    <string name="menu_send_label">Send</string>
    <string name="error_selecting_file">There was an error with the selected file. Please select another file!!!</string>
    <string name="error_selecting_file_title">We\'re sorry!!!</string>
    <string name="success_message">Message sent!!</string>
    <string name="error_sending_message">There was an error sending your message. Please try again!!!</string>
    <string name="title_activity_view_image">Ribbit</string>
    <string name="subtitle">My First Project</string>
    <string name="cancel_button_label">CANCEL</string>
    <string name="push_notification_message">You have a message from %s</string>


</resources>
